--- a/09_Utilties/2_ui_component/02_fullPageScroll/css/index.css
+++ b/09_Utilties/2_ui_component/02_fullPageScroll/css/index.css
@@ -1,59 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-}
-
-body {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#pureFullPage {
-  position: relative;
-  top: 0;
-  transition: all 500ms;
-}
-
-.page {
-  width: 100%;
-  height: 100vh;
-}
-
-.page:nth-child(1) {
-  background: red no-repeat center/cover;
-}
-
-.page:nth-child(2) {
-  background: green no-repeat center/cover;
-}
-
-.page:nth-child(3) {
-  background: blue no-repeat center/cover;
-}
-
-.nav {
-  position: fixed;
-  top: 50%;
-  right: 10px;
-  width: 15px;
-  transform: translateY(-50%);
-}
-
-.nav p {
-  width: 8px;
-  height: 8px;
-  background-color: #fff;
-  margin: 15px auto;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: all 500ms ease;
-  box-shadow: 0 0 4px #fff;
-}
-
-.nav p.active {
-  width: 12px;
-  height: 12px;
-  background-color: #000;
-  box-shadow: 0 0 6px #000;
+.page p {
+  font-size: 40px;
 }
